# GPX

./: .gitignore  .travis.yml  AUTHORS.md  Makefile  Makefile.am  Makefile.in  README.md  Readme.md  aclocal.m4  configure  configure.ac  example-pause-at-zpos.ini  example-temperature.ini  example.ini  getopt.c  getopt.h  gpx-main.c  gpx.c  gpx.h  gpx.ini  gpx.py  ini.c  ini.h  lint.gcode  machine.h  macro-example.gcode  release.sh  s3g-decompiler.py  std_machines.h
build-aux/: archive-name.sh
examples/: example-machine.ini  gpx.ini  macro-example.gcode  rep2-eeprom.ini
plugins/cura15.06/X3gWriter/: X3gWriter.py
pymodule/: gpxmodule.c  setup.py
scripts/: gpx.py  s3g-decompiler.py
slicerplugins/cura15.06/X3gWriter/: __init__.py
src/defines/: defines.mk  rules.mk
src/gpx/: Makefile  Makefile.am  Makefile.in  getopt.c  getopt_.h  gpx-main.c  gpx.c  gpx.h  gpxresp.c  vector.c  vector.h  winsio.c  winsio.h
src/gpx/tests/: customeeprom.gcode  eepromtest.gcode  eepromtest_sailfish_4_7.gcode  issue13-g.txt  issue13-g.x3g  issue13.gcode  issue13.txt  issue13.x3g  issuemarkwal1.gcode  lint-g.txt  lint-g.x3g  lint.gcode  lint.txt  lint.x3g  testg10g11.gcode  testg10g11.x3g
src/pymodule/: Readme.md  gpxmodule.c  setup.py  test.py  test2.py
src/shared/: classic_machines.h  config.c  config.h  config.h.in  eeprominfo.h  machine.h  machine_config.c  machine_config.h  opt.c  opt.h  portable_endian.h  s3g.c  s3g.h  s3g_commands.h  s3g_private.h  s3g_stdio.c  s3g_stdio.h  sailfish_4_7.h  sailfish_7_7.h  std_eeprommaps.h  std_machines.h
src/utils/: Makefile  Makefile.am  Makefile.in  machines.c  s3gdump.c
